# backend/openapi.yaml
@@ -1417,6 +1417,32 @@ paths:
               schema:
                 $ref: '#/components/schemas/PlannedExpense'
           description: ''
+  /api/v1/planned-expenses/reorder/:
+    post:
+      operationId: v1_planned_expenses_reorder_create
+      tags:
+      - v1
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PlannedExpense'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/PlannedExpense'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/PlannedExpense'
+        required: true
+      security:
+      - cookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PlannedExpense'
+          description: ''
   /api/v1/preferences/:
     get:
       operationId: v1_preferences_retrieve
@@ -2675,6 +2701,9 @@ components:
           maximum: 9223372036854775807
           minimum: 0
           format: int64
+        display_order:
+          type: integer
+          readOnly: true
         actual_paid_amount:
           type: number
           format: double
@@ -2915,6 +2944,9 @@ components:
           maximum: 9223372036854775807
           minimum: 0
           format: int64
+        display_order:
+          type: integer
+          readOnly: true
         actual_paid_amount:
           type: number
           format: double
@@ -2970,6 +3002,7 @@ components:
       - actual_paid_amount
       - carryover_credit
       - created_at
+      - display_order
       - due_date
       - expected_amount
       - id
